-Convert to current gecko framework (USE_GECKO). -Remove seamonkey option; it doesn't build. [1] -Correct the USE_LDCONFIG. (Unsure why it has lib/${MOZILLA}.)
PR:		ports/117327 [1]
Reported by:	Marat N.Afanasyev <marat@zealot.ksu.ru> [1]

--- a/devel/devhelp/Makefile
+++ b/devel/devhelp/Makefile
@@ -9,45 +9,31 @@ PORTNAME=	devhelp
 PORTVERSION=	0.19
 PORTREVISION=	1
 CATEGORIES=	devel gnome
-MASTER_SITES=	${MASTER_SITE_GNOME}
-MASTER_SITE_SUBDIR=	sources/${PORTNAME}/${PORTVERSION:C,^([[:digit:]]+\.[[:digit:]]+).*,\1,}
+MASTER_SITES=	GNOME
 DIST_SUBDIR=	gnome2
 
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Developer help browser for GNOME 2
 
-BUILD_DEPENDS=	${LOCALBASE}/lib/${MOZILLA}/components/libwidget_gtk2.so:${PORTSDIR}/www/${MOZILLA}
-RUN_DEPENDS=	${LOCALBASE}/lib/${MOZILLA}/components/libwidget_gtk2.so:${PORTSDIR}/www/${MOZILLA}
-
-MOZILLA=	firefox
-
-.if !defined(WITH_MOZILLA)
-MOZILLA=	firefox
-.else
-.if ${WITH_MOZILLA} == "xulrunner"
-MOZILLA=	xulrunner
-.elif ${WITH_MOZILLA} == "seamonkey"
-MOZILLA=	seamonkey
-.endif
-.endif
-
 USE_BZIP2=	yes
 USE_XORG=	x11
 USE_GETTEXT=	yes
+USE_GECKO=	firefox xulrunner
 USE_GMAKE=	yes
 USE_GNOME=	gnomehack intlhack gnomeprefix libgnomeui libwnck
 USE_AUTOTOOLS=	libtool:15
 GNU_CONFIGURE=	yes
 INSTALLS_ICONS=	yes
-USE_LDCONFIG=	${LOCALBASE}/lib/${MOZILLA}
+USE_LDCONFIG=	yes
 GCONF_SCHEMAS=	devhelp.schemas
 CONFIGURE_ENV=	CPPFLAGS="${PTHREAD_CFLAGS} -I${LOCALBASE}/include" \
 		LDFLAGS="${PTHREAD_LIBS} -L${LOCALBASE}/lib"
-CONFIGURE_ARGS=	--with-gecko=${MOZILLA}
+CONFIGURE_ARGS=	--with-gecko=${GECKO}
 
 OPTIONS=		GEDIT "Enable GEdit plug-in support" off
 
 .include <bsd.port.pre.mk>
+.include "${PORTSDIR}/www/mozilla/bsd.gecko.mk"
 
 .if defined(WITH_GEDIT)
 BUILD_DEPENDS+=	gedit:${PORTSDIR}/editors/gedit
@@ -66,13 +52,5 @@ post-patch:
 	@${REINPLACE_CMD} -e 's|gedit-plugin||' \
 		${WRKSRC}/misc/Makefile.in
 .endif
-
-pre-everything::
-	@${ECHO_MSG} ""
-	@${ECHO_MSG} " By default the port uses www/firefox for html rendering, but you can"
-	@${ECHO_MSG} " change this by defining WITH_MOZILLA to one of the following values:"
-	@${ECHO_MSG}
-	@${ECHO_MSG} "  xulrunner seamonkey      "
-	@${ECHO_MSG} ""
 
 .include <bsd.port.post.mk>
