- Change CFLAGS to: CFLAGS+= -I${LOCALBASE}/include
PR:		ports/123531
Submitted by:	Harry Kane <harry.kane@gmail.com>
Approved by:	Christian Ludwig <chrissicool@chrissicool.net> (maintainer)

--- a/ftp/ftp-proxy/Makefile
+++ b/ftp/ftp-proxy/Makefile
@@ -21,7 +21,7 @@ MANCOMPRESSED=	yes
 PLIST_FILES=	sbin/ftp-proxy
 USE_RC_SUBR=	ftp-proxy
 
-CFLAGS+=	-I${PREFIX}/include
+CFLAGS+=	-I${LOCALBASE}/include
 
 .include <bsd.port.pre.mk>
 
