- New port svntrac - Slave port based on devel/cvstrac that implements Trac-like   functionality for the Subversion SCM system.
PR:		ports/123651
Submitted by:	Greg Larkin <glarkin at sourcehosting.net>

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2360,6 +2360,7 @@
     SUBDIR += svn_load_dirs
     SUBDIR += svndelta
     SUBDIR += svnkit
+    SUBDIR += svntrac
     SUBDIR += swig11
     SUBDIR += swig13
     SUBDIR += synfig
