- Make mplayer support optional - Add gstreamer support - Fix xine support (requires xcb support in libxine) - Add missing USE_XORG - Bump PORTREVISION
PR:		ports/123763
Submitted by:	Max Brazhnikov <makc at issp.ac.ru> (maintainer)

--- a/multimedia/subtitlecomposer-kde4/Makefile
+++ b/multimedia/subtitlecomposer-kde4/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	subtitlecomposer
 PORTVERSION=	0.4.1
+PORTREVISION=	1
 CATEGORIES=	multimedia
 MASTER_SITES=	SF
 MASTER_SITE_SUBDIR=subcomposer
@@ -14,23 +15,44 @@ MASTER_SITE_SUBDIR=subcomposer
 MAINTAINER=	makc@issp.ac.ru
 COMMENT=	Subtitle editor for KDE
 
-RUN_DEPENDS=	mplayer:${PORTSDIR}/multimedia/mplayer
-
 USE_BZIP2=	yes
 USE_AUTOTOOLS=	libtool:15
 USE_KDELIBS_VER=3
+USE_XORG=	xext
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--without-gstreamer
+WANT_GSTREAMER=	yes
 INSTALLS_ICONS=	yes
 
-OPTIONS=	XINE "Enable Xine backend" off
+OPTIONS=	MPLAYER "Enable MPlayer backend (recommended)" on \
+		XINE "Enable Xine backend" off \
+		GSTREAMER "Enable GStreamer backend" off
 
 .include <bsd.port.pre.mk>
 
+.if defined(WITH_MPLAYER)
+RUN_DEPENDS+=	mplayer:${PORTSDIR}/multimedia/mplayer
+.endif
+
 .if defined(WITH_XINE)
-LIB_DEPENDS+=	xine.1:${PORTSDIR}/multimedia/libxine
+
+. if exists(${LOCALBASE}/bin/xine-config)
+XINE_PLUGINDIR!=	${LOCALBASE}/bin/xine-config --plugindir
+. endif
+
+. if defined(XINE_PLUGINDIR) && !exists(${XINE_PLUGINDIR}/xineplug_vo_out_xcbxv.so)
+IGNORE=		needs XCB support in libxine
+. endif
+
+LIB_DEPENDS+=	xine.1:${PORTSDIR}/multimedia/libxine \
+		xcb.1:${PORTSDIR}/x11/libxcb
 .else
-CONFIGURE_ARGS+=--without-xine
+CONFIGURE_ARGS+=--without-xine --without-xcb
+.endif
+
+.if defined(WITH_GSTREAMER)
+USE_GSTREAMER+=	yes
+.else
+CONFIGURE_ARGS=	--without-gstreamer
 .endif
 
 .include <bsd.port.post.mk>
