Sakai is an online Collaboration and Learning Environment. Many users of Sakai deployit to support teaching and learning, ad hoc group collaboration, support for portfolios and research collaboration.
Sakai is a free and open source product that is built and maintained by the
Sakai community. Sakai's development model is called "Community Source"
because many of the developers creating Sakai are drawn from the "community"
of organizations that have adopted and are using Sakai.

WWW: http://www.sakaiproject.org

PR:		ports/121730
Submitted by:	wenheping at gmail.com

--- a/www/Makefile
+++ b/www/Makefile
@@ -1208,6 +1208,7 @@
     SUBDIR += rubygem-taggable
     SUBDIR += rubygem-thin
     SUBDIR += runsomebrowser
+    SUBDIR += sakai
     SUBDIR += samidare
     SUBDIR += sams
     SUBDIR += sarg
