Update to 2.4.2.  See http://developer.pidgin.im/wiki/ChangeLog for the list of changes.

--- a/net-im/finch/Makefile
+++ b/net-im/finch/Makefile
@@ -24,6 +24,7 @@ PIDGIN_SLAVE=	yes
 WITH_CONSOLEUI=	yes
 
 USE_LDCONFIG=	yes
-CONFIGURE_ARGS=	--disable-gtkui
+CONFIGURE_ARGS=	--disable-gtkui \
+		--disable-nm
 
 .include "${MASTERDIR}/Makefile"
