--- a/sysutils/hal/Makefile
+++ b/sysutils/hal/Makefile
@@ -7,8 +7,7 @@
 #
 
 PORTNAME=	hal
-DISTVERSION=	0.5.11rc2
-PORTREVISION=	8
+DISTVERSION=	0.5.11
 CATEGORIES=	sysutils
 MASTER_SITES=	http://hal.freedesktop.org/releases/
 
