--- a/devel/ocaml-camlp5/Makefile
+++ b/devel/ocaml-camlp5/Makefile
@@ -8,6 +8,7 @@
 
 PORTNAME=	camlp5
 PORTVERSION=	5.08
+PORTREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	http://cristal.inria.fr/~ddr/camlp5/distrib/src/ \
 		http://pauillac.inria.fr/~ddr/camlp5/distrib/src/
@@ -47,5 +48,6 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/${f} ${DOCSDIR}
 .endfor
 .endif
+	${INSTALL_DATA} ${WRKSRC}/etc/META ${PREFIX}/lib/ocaml/${PORTNAME}
 
 .include <bsd.port.post.mk>
