--- a/sysutils/pftop/Makefile
+++ b/sysutils/pftop/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	pftop
 PORTVERSION=	0.7
+PORTREVISION=	1
 CATEGORIES=	sysutils net
 MASTER_SITES=	http://www.eee.metu.edu.tr/~canacar/
 DISTNAME=	${PORTNAME}-${PORTVERSION}
