- Include some ports in perl5 category.
PR:		ports/123530
Submitted by:	Philip M. Gollucci <pgollucci@p6m7g8.com>
Reworked by:	araujo (myself)
Approved by:	flz (portmgr)

--- a/astro/p5-Geo-METAR/Makefile
+++ b/astro/p5-Geo-METAR/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Geo-METAR
 PORTVERSION=	1.15
-CATEGORIES=	astro geography
+CATEGORIES=	astro geography perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	Geo
 PKGNAMEPREFIX=	p5-
