--- a/devel/p5-Curses-Forms/Makefile
+++ b/devel/p5-Curses-Forms/Makefile
@@ -8,7 +8,7 @@
 
 PORTNAME=	Curses-Forms
 PORTVERSION=	1.997
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 DISTNAME=	CursesForms-${PORTVERSION}
