--- a/devel/p5-Danga-Socket/Makefile
+++ b/devel/p5-Danga-Socket/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Danga-Socket
 PORTVERSION=	1.57
-CATEGORIES=	devel net
+CATEGORIES=	devel net perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
