--- a/devel/p5-Java/Makefile
+++ b/devel/p5-Java/Makefile
@@ -8,7 +8,7 @@
 PORTNAME=	Java
 PORTVERSION=	4.7
 PORTREVISION=	2
-CATEGORIES=	devel java
+CATEGORIES=	devel java perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
