--- a/finance/p5-Data-Currency/Makefile
+++ b/finance/p5-Data-Currency/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Data-Currency
 PORTVERSION=	0.04002
-CATEGORIES=	finance
+CATEGORIES=	finance perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	Data
 PKGNAMEPREFIX=	p5-
