--- a/graphics/p5-SVG-Metadata/Makefile
+++ b/graphics/p5-SVG-Metadata/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	SVG-Metadata
 PORTVERSION=	0.28
-CATEGORIES=	graphics
+CATEGORIES=	graphics perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
