--- a/math/p5-Algorithm-CurveFit/Makefile
+++ b/math/p5-Algorithm-CurveFit/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Algorithm-CurveFit
 PORTVERSION=	1.03
-CATEGORIES=	math
+CATEGORIES=	math perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	Algorithm
 PKGNAMEPREFIX=	p5-
