--- a/math/p5-Math-Polynomial-Solve/Makefile
+++ b/math/p5-Math-Polynomial-Solve/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Math-Polynomial-Solve
 PORTVERSION=	2.11
-CATEGORIES=	math
+CATEGORIES=	math perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	Math
 PKGNAMEPREFIX=	p5-
