--- a/net/p5-Net-ARP/Makefile
+++ b/net/p5-Net-ARP/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Net-ARP
 PORTVERSION=	1.0.2
-CATEGORIES=	net
+CATEGORIES=	net perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 EXTRACT_SUFX=	.tgz
