--- a/www/p5-Catalyst-Action-REST/Makefile
+++ b/www/p5-Catalyst-Action-REST/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Catalyst-Action-REST
 PORTVERSION=	0.60
-CATEGORIES=	www
+CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
