--- a/www/p5-Catalyst-Authentication-Store-LDAP/Makefile
+++ b/www/p5-Catalyst-Authentication-Store-LDAP/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Catalyst-Authentication-Store-LDAP
 PORTVERSION=	0.1001
-CATEGORIES=	www
+CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
