--- a/www/p5-Catalyst-View-Email/Makefile
+++ b/www/p5-Catalyst-View-Email/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Catalyst-View-Email
 PORTVERSION=	0.10
-CATEGORIES=	www
+CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
