--- a/databases/p5-SQL-ReservedWords/Makefile
+++ b/databases/p5-SQL-ReservedWords/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	SQL-ReservedWords
 PORTVERSION=	0.7
-CATEGORIES=	databases
+CATEGORIES=	databases perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
