--- a/devel/p5-Class-Measure/Makefile
+++ b/devel/p5-Class-Measure/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Class-Measure
 PORTVERSION=	0.03
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	Class
 PKGNAMEPREFIX=	p5-
