--- a/devel/p5-Class-ReturnValue/Makefile
+++ b/devel/p5-Class-ReturnValue/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Class-ReturnValue
 PORTVERSION=	0.55
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
