--- a/devel/p5-Coro/Makefile
+++ b/devel/p5-Coro/Makefile
@@ -8,7 +8,7 @@
 PORTNAME=	Coro
 PORTVERSION=	4.5.1
 PORTEPOCH=	1
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 DISTNAME=	${PORTNAME}-${PORTVERSION:C/\.(.)$/\1/}
