--- a/devel/p5-Curses-Application/Makefile
+++ b/devel/p5-Curses-Application/Makefile
@@ -8,7 +8,7 @@
 
 PORTNAME=	Curses-Application
 PORTVERSION=	0.2
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 DISTNAME=	CursesApplication-${PORTVERSION}
