--- a/devel/p5-Curses-Widgets/Makefile
+++ b/devel/p5-Curses-Widgets/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Curses-Widgets
 PORTVERSION=	1.997
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 DISTNAME=	CursesWidgets-${PORTVERSION}
