--- a/devel/p5-Object-Realize-Later/Makefile
+++ b/devel/p5-Object-Realize-Later/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Object-Realize-Later
 PORTVERSION=	0.18
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	Object
 PKGNAMEPREFIX=	p5-
