--- a/devel/p5-Term-ReadPassword/Makefile
+++ b/devel/p5-Term-ReadPassword/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Term-ReadPassword
 PORTVERSION=	0.11
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
