--- a/devel/p5-Time-Object/Makefile
+++ b/devel/p5-Time-Object/Makefile
@@ -8,7 +8,7 @@
 PORTNAME=	Time-Object
 PORTVERSION=	1.00
 PORTREVISION=	1
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
