--- a/devel/p5-accessors/Makefile
+++ b/devel/p5-accessors/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	accessors
 PORTVERSION=	1.00
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	../by-authors/id/S/SP/SPURKIS
 PKGNAMEPREFIX=	p5-
