--- a/devel/p5-subatom/Makefile
+++ b/devel/p5-subatom/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	subatom
 PORTVERSION=	0.12
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	../../authors/id/H/HD/HDM
 PKGNAMEPREFIX=	p5-
