--- a/mail/p5-Mail-LMLM/Makefile
+++ b/mail/p5-Mail-LMLM/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Mail-LMLM
 PORTVERSION=	0.6400
-CATEGORIES=	mail
+CATEGORIES=	mail perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	Mail
 PKGNAMEPREFIX=	p5-
