--- a/math/p5-AI-NeuralNet-BackProp/Makefile
+++ b/math/p5-AI-NeuralNet-BackProp/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	AI-NeuralNet-BackProp
 PORTVERSION=	0.89
-CATEGORIES=	math
+CATEGORIES=	math perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
