--- a/math/p5-Statistics-Forecast/Makefile
+++ b/math/p5-Statistics-Forecast/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Statistics-Forecast
 PORTVERSION=	0.3
-CATEGORIES=	math
+CATEGORIES=	math perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	Statistics
 PKGNAMEPREFIX=	p5-
