--- a/math/p5-Statistics-LineFit/Makefile
+++ b/math/p5-Statistics-LineFit/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Statistics-LineFit
 PORTVERSION=	0.07
-CATEGORIES=	math
+CATEGORIES=	math perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	Statistics
 PKGNAMEPREFIX=	p5-
