--- a/net/p5-Net-Yadis/Makefile
+++ b/net/p5-Net-Yadis/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Net-Yadis
 PORTVERSION=	1.0
-CATEGORIES=	net
+CATEGORIES=	net perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	Net
 PKGNAMEPREFIX=	p5-
