--- a/security/p5-Authen-TacacsPlus/Makefile
+++ b/security/p5-Authen-TacacsPlus/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	TacacsPlus
 PORTVERSION=	0.16
-CATEGORIES=	security
+CATEGORIES=	security perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
