--- a/security/p5-Authen-Ticket/Makefile
+++ b/security/p5-Authen-Ticket/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Authen-Ticket
 PORTVERSION=	0.02
-CATEGORIES=	security
+CATEGORIES=	security perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
