--- a/security/p5-Crypt-PGPSimple/Makefile
+++ b/security/p5-Crypt-PGPSimple/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Crypt-PGPSimple
 PORTVERSION=	0.13
-CATEGORIES=	security
+CATEGORIES=	security perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
