--- a/security/p5-Yahoo-BBAuth/Makefile
+++ b/security/p5-Yahoo-BBAuth/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Yahoo-BBAuth
 PORTVERSION=	0.50
-CATEGORIES=	security www
+CATEGORIES=	security www perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	Yahoo
 PKGNAMEPREFIX=	p5-
