--- a/textproc/p5-Senna/Makefile
+++ b/textproc/p5-Senna/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Senna
 PORTVERSION=	0.51
-CATEGORIES=	textproc
+CATEGORIES=	textproc perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	../by-authors/id/D/DM/DMAKI/
 PKGNAMEPREFIX=	p5-
