--- a/textproc/p5-String-Format/Makefile
+++ b/textproc/p5-String-Format/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	String-Format
 PORTVERSION=	1.14
-CATEGORIES=	textproc
+CATEGORIES=	textproc perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
