--- a/www/p5-ApacheBench/Makefile
+++ b/www/p5-ApacheBench/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	ApacheBench
 PORTVERSION=	0.63
-CATEGORIES=	www
+CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	HTTPD
 PKGNAMEPREFIX=	p5-
