--- a/www/p5-Catalyst-View-Templated/Makefile
+++ b/www/p5-Catalyst-View-Templated/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Catalyst-View-Templated
 PORTVERSION=	0.02
-CATEGORIES=	www
+CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	../by-authors/id/J/JR/JROCKWAY
 PKGNAMEPREFIX=	p5-
