--- a/www/p5-Catalyst-View-XSLT/Makefile
+++ b/www/p5-Catalyst-View-XSLT/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Catalyst-View-XSLT
 PORTVERSION=	0.04
-CATEGORIES=	www
+CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	../by-authors/id/M/MA/MARTING
 PKGNAMEPREFIX=	p5-
