--- a/www/p5-HTML-Adsense/Makefile
+++ b/www/p5-HTML-Adsense/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	HTML-Adsense
 PORTVERSION=	0.2
-CATEGORIES=	www
+CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	HTML
 PKGNAMEPREFIX=	p5-
