--- a/www/p5-HTML-FillInForm-ForceUTF8/Makefile
+++ b/www/p5-HTML-FillInForm-ForceUTF8/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	HTML-FillInForm-ForceUTF8
 PORTVERSION=	0.02
-CATEGORIES=	www
+CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
