--- a/www/p5-HTTP-MobileAttribute/Makefile
+++ b/www/p5-HTTP-MobileAttribute/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	HTTP-MobileAttribute
 PORTVERSION=	0.11.1
-CATEGORIES=	www
+CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	../by-authors/id/T/TO/TOKUHIROM
 PKGNAMEPREFIX=	p5-
