--- a/www/p5-Template-Plugin-JSON/Makefile
+++ b/www/p5-Template-Plugin-JSON/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	Template-Plugin-JSON
 PORTVERSION=	0.03
-CATEGORIES=	www
+CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
