--- a/x11-fonts/Makefile
+++ b/x11-fonts/Makefile
@@ -116,6 +116,7 @@
     SUBDIR += terminus-font
     SUBDIR += texcm-ttf
     SUBDIR += tkfont
+    SUBDIR += tmu
     SUBDIR += tolkien-ttf
     SUBDIR += ttmkfdir
     SUBDIR += tv-fonts
