--- a/devel/cgilib/Makefile
+++ b/devel/cgilib/Makefile
@@ -6,7 +6,7 @@
 #
 
 PORTNAME=	cgilib
-PORTVERSION=	0.5
+PORTVERSION=	0.6
 CATEGORIES=	devel www
 MASTER_SITES=	http://www.infodrom.org/projects/cgilib/download/ \
 		http://people.ee.ethz.ch/~oetiker/webtools/rrdtool/pub/libs/
@@ -18,9 +18,11 @@ USE_LDCONFIG=	yes
 
 MAKEFILE=	${FILESDIR}/Makefile.bsd
 
-MAN3=		cgiDebug.3 cgiFree.3 cgiFreeList.3 cgiGetCookie.3 \
-		cgiGetCookies.3 cgiGetValue.3 cgiGetVariables.3 cgiHeader.3 \
-		cgiInit.3 cgiRedirect.3 cgiSetHeader.3 cgiSetType.3
+PLIST_FILES=	include/cgi.h lib/libcgi.a lib/libcgi.so lib/libcgi.so.1
+MAN3=		cgiDebug.3 cgiFree.3 cgiFreeList.3 cgiGetCookie.3 cgiEscape.3 \
+		cgiGetFile.3 cgiGetFiles.3 cgiGetCookies.3 cgiGetValue.3 \
+		cgiGetVariables.3 cgiHeader.3 cgiInit.3 cgiRedirect.3 \
+		cgiSetHeader.3 cgiSetType.3
 
 post-install:
 	${INSTALL_DATA} ${WRKSRC}/cgi.h ${PREFIX}/include
