--- a/devel/cgilib/files/Makefile.bsd
+++ b/devel/cgilib/files/Makefile.bsd
@@ -1,10 +1,10 @@
 LIB=	cgi
 
-NOPROFILE=	yes
+NO_PROFILE=	yes
 SHLIB_MAJOR?=	1
 SHLIB_MINOR?=	0
 
-SRCS=		cookies.c cgi.c
+SRCS=		cookies.c cgi.c aux.c
 
 CFLAGS+=	-I.
 
