Fix the installation and plist when NOPORTDOCS is defined, bump the PORTREVISION.
Reported by:	itetcu

--- a/devel/glibmm-reference/Makefile
+++ b/devel/glibmm-reference/Makefile
@@ -5,7 +5,7 @@
 # $FreeBSD$
 #
 
-PORTREVISION=	3
+PORTREVISION=	4
 
 BUILD_DEPENDS=	${LOCALBASE}/libdata/pkgconfig/glibmm-2.4.pc:${PORTSDIR}/devel/glibmm \
 		gm4:${PORTSDIR}/devel/m4
@@ -25,8 +25,11 @@ post-build:
 	@${TOUCH} ${WRKSRC}/docs/reference/html/index.html
 
 do-install:
-.for d in docs examples
+.if !defined(NOPORTDOCS)
+.  for d in docs examples
 	@cd ${WRKSRC}/${d} && ${GMAKE} install
-.endfor
+.  endfor
+.endif
+
 
 .include "${.CURDIR}/../../devel/glib20-reference/bsd.gnome-reference.mk"
