Add GvGen, an easy python interface to generate dot files.
PR:		ports/123776
Submitted by:	Sofian Brabez <sbrabez@gmail.com>

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -630,6 +630,7 @@
     SUBDIR += py-glewpy
     SUBDIR += py-goocanvas
     SUBDIR += py-graphviz
+    SUBDIR += py-gvgen
     SUBDIR += py-imaging
     SUBDIR += py-ming
     SUBDIR += py-opengl
