--- a/databases/fastdb/Makefile
+++ b/databases/fastdb/Makefile
@@ -29,6 +29,10 @@ PORTDOCS=	FastDB.htm
 
 .include <bsd.port.pre.mk>
 
+.if ${OSVERSION} < 600000
+BROKEN=		does not compile
+.endif
+
 post-install:
 .if !defined(NOPORTDOCS)
 	@${MKDIR} ${DOCSDIR}
