--- a/x11-toolkits/gnustep-gui/Makefile
+++ b/x11-toolkits/gnustep-gui/Makefile
@@ -48,6 +48,12 @@ MAKE_FLAGS+=	OPTFLAG="${CFLAGS}"
 BREAKS_IF_PEDANTIC=	yes
 PLIST_SUB+=	BASEVERSION=${PORTVERSION:C/[.][0-9]*$//1}
 
+.include <bsd.port.pre.mk>
+
+.if ${OSVERSION} < 600000
+BROKEN=		does not link
+.endif
+
 .if defined(WITHOUT_GNUSTEP_FAKEMAIN)
 .if !exists(/proc/curproc)
 IGNORE=		requires procfs mounted to build or run, for details see procfs(5)
@@ -89,4 +95,4 @@ pre-configure:
 	${REINPLACE_CMD} -e "s|doc=no|doc=yes|" ${WRKSRC}/GNUmakefile
 .endif
 
-.include <bsd.port.mk>
+.include <bsd.port.post.mk>
