- Disable selftext on amd64/8 - we have a runaway IlmImfTest on pointyhat

--- a/graphics/OpenEXR/Makefile
+++ b/graphics/OpenEXR/Makefile
@@ -35,7 +35,9 @@ test check:	build
 
 .if defined(PACKAGE_BUILDING)
 .if ${ARCH} != sparc64 || ${OSVERSION} >= 700055
+.if ${ARCH} != amd64 || ${OSVERSION} < 800000
 pre-install:	test
+.endif
 .endif
 .endif
 
