- Mark BROKEN: does not compile against recent php5
Reported by:	pointyhat

--- a/www/pecl-mnogosearch/Makefile
+++ b/www/pecl-mnogosearch/Makefile
@@ -18,6 +18,8 @@ COMMENT=	The mnoGoSearch Bindings for php51+
 
 BUILD_DEPENDS=	indexer:${PORTSDIR}/www/mnogosearch
 
+BROKEN=		does not compile
+
 USE_PHP=	yes
 USE_PHPEXT=	yes
 
