- Fix typo, this fixes the NOPORTEXAMPLES knob

--- a/devel/py-pycallgraph/Makefile
+++ b/devel/py-pycallgraph/Makefile
@@ -22,7 +22,7 @@ USE_PYDISTUTILS=	yes
 
 EXAMPLESDIR=	${PREFIX}/share/examples/py-${PORTNAME}
 
-.if !defined(NOPORTEXANPLES)
+.if !defined(NOPORTEXAMPLES)
 post-install:
 	${MKDIR} ${EXAMPLESDIR}
 	${CP} ${WRKSRC}/examples/* ${EXAMPLESDIR}
