- fix run-time error - bump PORTREVISION
Changes:

--- a/devel/py-jcc/Makefile
+++ b/devel/py-jcc/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	jcc
 PORTVERSION=	1.9
+PORTREVISION=	1
 CATEGORIES=	devel java python
 MASTER_SITES=	CHEESESHOP
 MASTER_SITE_SUBDIR=	source/J/JCC
@@ -24,7 +25,7 @@ JAVA_VERSION=	1.4+
 
 JCC_INCLUDES=	'${JAVA_HOME}/include;${JAVA_HOME}/include/freebsd'
 JCC_CFLAGS=	-pipe
-JCC_LFLAGS=	'-L${JAVA_HOME}/jre/lib/${ARCH} -ljava'
+JCC_LFLAGS=	'-L${JAVA_HOME}/jre/lib/${ARCH};-ljava'
 
 MAKE_ENV+=	JCC_INCLUDES=${JCC_INCLUDES} JCC_CFLAGS=${JCC_CFLAGS} JCC_LFLAGS=${JCC_LFLAGS} JCC_ARGSEP=";"
 
