Mark xorg-server-snap as DEPRECATED and set EXPIRATION_DATE to next month.

--- a/x11-servers/xorg-server-snap/Makefile
+++ b/x11-servers/xorg-server-snap/Makefile
@@ -25,6 +25,8 @@ RUN_DEPENDS=	${LOCALBASE}/share/X11/xkb/rules/base.xml:${PORTSDIR}/x11/xkeyboard
 CONFLICTS=	XFree86-Server-*
 
 IGNORE=		is outdated
+DEPRECATED=	Port hasn't been used since the switch to modular releases
+EXPIRATION_DATE=2008-06-20
 
 XORG_CAT=	xserver
 
