Add xephyr, a kdrive-based X server. Xephyr will ultimately replace Xnest.
PR:		ports/123795
Submitted by:	Max Brazhnikov <makc@issp.ac.ru>

--- a/x11-servers/Makefile
+++ b/x11-servers/Makefile
@@ -8,6 +8,7 @@
     SUBDIR += mga_hal
     SUBDIR += x2vnc
     SUBDIR += x2x
+    SUBDIR += xephyr
     SUBDIR += xorg-dmx
     SUBDIR += xorg-nestserver
     SUBDIR += xorg-server
